--- a/Maui/SimpleWeather.Maui/Controls/Graphs/Views/RangeBarGraphPanel.xaml
+++ b/Maui/SimpleWeather.Maui/Controls/Graphs/Views/RangeBarGraphPanel.xaml
@@ -32,7 +32,7 @@
             BottomTextColor="{AppThemeBinding Light=Black, Dark=White}"
             DrawDataLabels="True"
             DrawIconLabels="True"
-            FontSize="{OnIdiom Phone=13, Default=15}"
+            BottomTextSize="{OnIdiom Phone=13, Default=15}"
             HeightRequest="{OnIdiom Default=275, Phone=225}"
             ItemWidthChanged="GraphView_ItemWidthChanged"
             Loaded="GraphView_Loaded"
