--- a/SimpleWeather.Windows/Controls/Graphs/Views/ForecastGraphPanel.xaml
+++ b/SimpleWeather.Windows/Controls/Graphs/Views/ForecastGraphPanel.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl
+﻿<graphs:GraphPanel
     x:Class="SimpleWeather.NET.Controls.Graphs.ForecastGraphPanel"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -18,7 +18,7 @@
     d:DesignWidth="400"
     mc:Ignorable="d">
 
-    <UserControl.Resources>
+    <graphs:GraphPanel.Resources>
         <ResourceDictionary>
             <ResourceDictionary.ThemeDictionaries>
                 <ResourceDictionary x:Key="Dark">
@@ -30,7 +30,7 @@
             </ResourceDictionary.ThemeDictionaries>
             <helpers:ObjectContainer x:Key="IsLight" Value="{ThemeResource IsLightValue}" />
         </ResourceDictionary>
-    </UserControl.Resources>
+    </graphs:GraphPanel.Resources>
 
     <Grid>
         <Grid.ColumnDefinitions>
@@ -54,6 +54,8 @@
             x:Name="LineGraphView"
             Grid.Column="1"
             Height="275"
+            BottomTextColor="{ThemeResource TextFillColorPrimary}"
+            BottomTextSize="{Binding ElementName=Control, Path=FontSize, Mode=TwoWay}"
             DrawDataLabels="True"
             DrawDotLine="False"
             DrawDotPoints="False"
@@ -61,7 +63,7 @@
             DrawGridLines="False"
             DrawIconLabels="False"
             DrawSeriesLabels="False"
-            FontSize="{Binding ElementName=Control, Path=FontSize, Mode=TwoWay}"
+            FillParentWidth="True"
             ItemWidthChanged="GraphView_ItemWidthChanged"
             Loaded="GraphView_Loaded"
             ViewChanged="GraphView_ViewChanged" />
@@ -72,7 +74,7 @@
                         <AdaptiveTrigger MinWindowWidth="0" />
                     </VisualState.StateTriggers>
                     <VisualState.Setters>
-                        <Setter Target="LineGraphView.FontSize" Value="13" />
+                        <Setter Target="LineGraphView.BottomTextSize" Value="13" />
                     </VisualState.Setters>
                 </VisualState>
                 <VisualState x:Name="Desktop">
@@ -80,10 +82,10 @@
                         <AdaptiveTrigger MinWindowWidth="641" />
                     </VisualState.StateTriggers>
                     <VisualState.Setters>
-                        <Setter Target="LineGraphView.FontSize" Value="15" />
+                        <Setter Target="LineGraphView.BottomTextSize" Value="15" />
                     </VisualState.Setters>
                 </VisualState>
             </VisualStateGroup>
         </VisualStateManager.VisualStateGroups>
     </Grid>
-</UserControl>
+</graphs:GraphPanel>
