--- a/SimpleWeather.Windows/Controls/Graphs/Views/RangeBarGraphPanel.xaml
+++ b/SimpleWeather.Windows/Controls/Graphs/Views/RangeBarGraphPanel.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl
+﻿<graphs:GraphPanel
     x:Class="SimpleWeather.NET.Controls.Graphs.RangeBarGraphPanel"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -11,7 +11,7 @@
     d:DesignWidth="400"
     mc:Ignorable="d">
 
-    <UserControl.Resources>
+    <graphs:GraphPanel.Resources>
         <ResourceDictionary>
             <ResourceDictionary.ThemeDictionaries>
                 <ResourceDictionary x:Key="Dark">
@@ -23,7 +23,7 @@
             </ResourceDictionary.ThemeDictionaries>
             <helpers:ObjectContainer x:Key="IsLight" Value="{ThemeResource IsLightValue}" />
         </ResourceDictionary>
-    </UserControl.Resources>
+    </graphs:GraphPanel.Resources>
 
     <Grid>
         <Grid.ColumnDefinitions>
@@ -46,9 +46,10 @@
         <graphs:RangeBarGraphView
             x:Name="BarChartView"
             Grid.Column="1"
+            BottomTextColor="{ThemeResource TextFillColorPrimary}"
+            BottomTextSize="{Binding ElementName=Control, Path=FontSize, Mode=TwoWay}"
             DrawDataLabels="True"
             DrawIconLabels="True"
-            FontSize="{Binding ElementName=Control, Path=FontSize, Mode=TwoWay}"
             ItemWidthChanged="GraphView_ItemWidthChanged"
             Loaded="GraphView_Loaded"
             ViewChanged="GraphView_ViewChanged" />
@@ -59,7 +60,7 @@
                         <AdaptiveTrigger MinWindowWidth="0" />
                     </VisualState.StateTriggers>
                     <VisualState.Setters>
-                        <Setter Target="BarChartView.FontSize" Value="13" />
+                        <Setter Target="BarChartView.BottomTextSize" Value="13" />
                     </VisualState.Setters>
                 </VisualState>
                 <VisualState x:Name="Desktop">
@@ -67,10 +68,10 @@
                         <AdaptiveTrigger MinWindowWidth="641" />
                     </VisualState.StateTriggers>
                     <VisualState.Setters>
-                        <Setter Target="BarChartView.FontSize" Value="15" />
+                        <Setter Target="BarChartView.BottomTextSize" Value="15" />
                     </VisualState.Setters>
                 </VisualState>
             </VisualStateGroup>
         </VisualStateManager.VisualStateGroups>
     </Grid>
-</UserControl>
+</graphs:GraphPanel>
