windows: disable AOT
* Many issues preventing this from working

--- a/SimpleWeather.Windows/Controls/DetailItem.xaml
+++ b/SimpleWeather.Windows/Controls/DetailItem.xaml
@@ -81,7 +81,7 @@
                 HorizontalAlignment="Left"
                 FontFamily="{StaticResource WeatherIconsFontFamily}"
                 MaxLines="1"
-                Text="{Binding Value, FallbackValue='50.00 in', Mode=OneWay}" />
+                Text="{x:Bind Details.Value, FallbackValue='50.00 in', Mode=OneWay}" />
         </Grid>
         <VisualStateManager.VisualStateGroups>
             <VisualStateGroup>
